Fix vertical scrolling overflow behavior

--- a/project/src/Clippy/wwwroot/css/bookmarks.css
+++ b/project/src/Clippy/wwwroot/css/bookmarks.css
@@ -2,10 +2,10 @@
 
 .content-main {
   display: flex;
-  height: 100%;
   width: 100%;
   flex-direction: column;
   align-items: center;
+  overflow-y: scroll;
 }
 
 .card-main {
@@ -55,17 +55,15 @@
 .body {
   display: flex;
   width: 100%;
-  height: auto;
+  height: calc(100vh - var(--navbar-height));
 }
 
 .content-manage {
   -webkit-break-inside: avoid;
   break-inside: avoid;
   width: 100%;
-  height: 93.5vh;
   padding: 10px 0px 0px 10px;
   padding-right: 24px;
-  overflow: hidden;
   overflow-y: scroll;
   text-align: center;
 }
@@ -73,7 +71,6 @@
 /* ------------------ Bookmarks sidebar styles ------------------ */
 
 .options {
-  height: 93.5vh;
   min-width: 300px;
   width: 300px;
   box-shadow: 1px 20px 0px 0px rgba(0, 0, 0, 0.3);
