--- a/project/src/Clippy/wwwroot/css/main.css
+++ b/project/src/Clippy/wwwroot/css/main.css
@@ -3,6 +3,8 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --primary-color: rgb(110, 198, 170);
 
+  --navbar-height: 60px;
+
   padding: 0;
   margin: 0;
 }
@@ -12,7 +14,7 @@
 #navbar {
   display: flex;
   width: 100%;
-  height: 60px;
+  height: var(--navbar-height);
   background-color: white;
   flex-direction: row;
   align-items: center;
